<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:fitsSystemWindows="true"
  android:layout_height="match_parent">
  <RelativeLayout
    android:id="@+id/header"
    android:layout_width="match_parent"
    android:layout_height="90dp"
    android:layout_alignParentTop="false"
    android:background="@color/toolbar_color_dark"
    android:gravity="center"
    android:layout_gravity="center">
    <LinearLayout
      android:focusable="true"
      android:focusableInTouchMode="true"
      android:id="@+id/header_child"
      android:layout_width="match_parent"
      android:layout_height="95dp"
      android:orientation="vertical"
      android:background="@color/toolbar_color_dark"
      android:gravity="center"
      android:layout_gravity="center">
      <TextView
        android:id="@+id/text_viewc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:textColor="#FFFFFF"
        android:fontFamily="sans-serif-medium"
        android:layout_marginBottom="4dp"
        android:textSize="24sp"
        android:text="WIMEA-ICT DATA " />

      <TextView
        android:id="@+id/text_view1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="1dp"
        android:textColor="#FFFFFF"
        android:fontFamily="sans-serif-medium"
        android:layout_marginBottom="4dp"
        android:textSize="18sp"
        android:text="REPOSITORY" />

    </LinearLayout>
  </RelativeLayout>
  <RelativeLayout
    android:id="@+id/footer"
    android:layout_width="match_parent"
    android:layout_height="20dp"
    android:layout_alignParentBottom="true"
    android:background="@color/toolbar_color_dark"
    android:gravity="center"
    android:layout_gravity="center">
    <TextView
      android:id="@+id/footer_text"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="copyright \u00A9 2018 WIMEA-ICT WDR"
      android:textColor="#FFFFFF"
      android:gravity="center"
      android:textSize="10sp"/>
  </RelativeLayout>

  <ScrollView
    android:id="@+id/scroll_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_above="@+id/footer"
    android:layout_below="@+id/header"
    android:fillViewport="true">


    <LinearLayout
      android:id="@+id/myLayout"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:background="@color/toolbar_color_dark"
      android:orientation="vertical">

      <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:visibility="invisible" />

      <LinearLayout
        android:id="@+id/toolbar1"
        android:layout_width="match_parent"
        android:layout_height="78dp"
        android:layout_marginLeft="@dimen/loginform"
        android:layout_marginRight="@dimen/loginform"
        android:layout_marginTop="@dimen/loginform"
        android:background="@drawable/top_background"
        android:gravity="top"
        android:orientation="horizontal"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <View
          android:layout_width="0dp"
          android:layout_height="0dp"
          android:layout_weight="2"
          android:visibility="invisible" />

        <ImageView
          android:id="@+id/imageView1"
          android:layout_width="100dp"
          android:layout_height="70dp"
          android:layout_gravity="top"
          android:padding="5dp"
          android:scaleY="1.5"
          android:src="@drawable/logo_colored"
          android:visibility="visible" />

        <View
          android:layout_width="0dp"
          android:layout_height="0dp"
          android:layout_weight="2"
          android:visibility="invisible" />


        <ImageView
          android:id="@+id/imageView2"
          android:layout_width="100dp"
          android:layout_height="75dp"
          android:layout_gravity="center_horizontal"
          android:src="@drawable/maklogo"
          android:visibility="visible" />

        <View
          android:layout_width="0dp"
          android:layout_height="0dp"
          android:layout_weight="2"
          android:visibility="invisible" />

        <ImageView
          android:id="@+id/imageView3"
          android:layout_width="100dp"
          android:layout_height="70dp"
          android:layout_gravity="center_horizontal"
          android:scaleX="1.1"
          android:src="@drawable/logo" />

        <View
          android:layout_width="0dp"
          android:layout_height="0dp"
          android:layout_weight="2"
          android:visibility="invisible" />

      </LinearLayout>

      <LinearLayout
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginLeft="@dimen/loginform"
        android:layout_marginRight="@dimen/loginform"
        android:background="#56A5DB"
        android:gravity="top"
        android:orientation="vertical"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">


        <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center_horizontal"
          android:text="Enter Your Login Credentials"
          android:textAlignment="center" />
      </LinearLayout>

      <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="335dp"
        android:layout_marginLeft="@dimen/loginform"
        android:layout_marginRight="@dimen/loginform"
        android:layout_marginTop="0dp"
        android:background="@drawable/layout_bg"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="35dp">

          <AutoCompleteTextView
            android:id="@+id/username"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:hint="@string/prompt_username"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content">

          <AutoCompleteTextView
            android:id="@+id/password"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:hint="@string/prompt_password"
            android:imeActionId="6"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <Button
          android:id="@+id/email_sign_in_button"
          style="?android:textAppearanceSmall"
          android:layout_width="310dp"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:layout_marginTop="16dp"
          android:background="@drawable/buttonshape"
          android:text="sign in"
          android:textStyle="bold" />
        <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="3dp"
          android:textColor="#000000"
          android:textSize="12sp"
          android:layout_gravity="center_horizontal"
          android:text="In Partnership With"
          android:textAlignment="center" />
        <LinearLayout
          android:id="@+id/footer1"
          android:layout_width="match_parent"
          android:layout_height="90dp"
          android:layout_marginLeft="7dp"
          android:layout_marginRight="7dp"
          android:padding="8dp"
          android:layout_marginTop="0dp"
          android:background="@drawable/bottom"
          android:orientation="horizontal">


          <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:visibility="invisible" />


            <ImageView
              android:id="@+id/imageView4"
              android:layout_width="100dp"
              android:layout_height="70dp"
              android:paddingRight="40sp"
              android:src="@drawable/otherbudge"
              android:visibility="visible" />

            <View
              android:layout_width="0dp"
              android:layout_height="0dp"
              android:layout_weight="1"
              android:visibility="invisible" />

            <ImageView
              android:id="@+id/imageView5"
              android:layout_width="100dp"
              android:layout_height="70dp"
              android:layout_gravity="top"
              android:paddingRight="15sp"
              android:layout_marginLeft="0dp"
              android:scaleY="2.3"
              android:scaleX="1.8"
              android:src="@drawable/university_bergen"
              android:visibility="visible" />

            <View
              android:layout_width="0dp"
              android:layout_height="0dp"
              android:layout_weight="1"
              android:visibility="invisible" />
          </LinearLayout>


        </LinearLayout>


      <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:visibility="invisible" />
      </LinearLayout>


  </ScrollView>
</RelativeLayout>
