<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
  android:id="@+id/layout3"
  android:orientation="vertical"
  android:focusable="true"
  android:focusableInTouchMode="true"
  android:background="@drawable/layout_bg"
  android:layout_height="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">

  <android.support.v7.widget.CardView
    android:layout_width="match_parent"
    android:layout_margin="@dimen/loginform"
    android:layout_height="60dp">

    <LinearLayout
      android:layout_width="match_parent"
      android:orientation="horizontal"
      android:layout_margin="3dp"
      android:layout_height="match_parent">
      <android.support.design.widget.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_weight="3"
        android:layout_marginLeft="3dp"
        android:layout_height="wrap_content">

        <EditText
          android:id="@+id/cloud_searchlight"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/cloud_searchlight_alidade_reading_hint"
          android:textSize="@dimen/formTextSize"
          android:inputType="numberDecimal"
          android:maxLines="1"
          android:singleLine="true" />

      </android.support.design.widget.TextInputLayout>
      <android.support.design.widget.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_weight="2"
        android:layout_marginStart="3dp"
        android:layout_height="wrap_content">

        <EditText
          android:id="@+id/rainfall_mm"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/rainfall_mm"
          android:textSize="@dimen/formTextSize"
          android:inputType="textNoSuggestions"
          android:maxLines="1"
          android:singleLine="true" />

      </android.support.design.widget.TextInputLayout>

    </LinearLayout>

  </android.support.v7.widget.CardView>

  <android.support.v7.widget.CardView
    android:layout_width="match_parent"
    android:layout_marginBottom="@dimen/loginform"
    android:layout_marginRight="@dimen/loginform"
    android:layout_marginLeft="@dimen/loginform"
    android:layout_height="wrap_content">
    <LinearLayout
      android:layout_width="match_parent"
      android:orientation="vertical"
      android:layout_margin="3dp"
      android:layout_height="match_parent">

      <LinearLayout
        android:layout_marginTop="0dp"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputLayout
          android:layout_width="80dp"
          android:layout_weight="2"
          android:orientation="vertical"
          android:paddingBottom="3dp"
          android:layout_gravity="bottom"
          android:layout_marginRight="@dimen/cloud_margin"
          android:layout_marginLeft="@dimen/cloud_margin"
          android:layout_height="match_parent">

          <EditText
            android:id="@+id/present_weather_code"
            android:layout_width="match_parent"
            android:padding="0dp"
            android:layout_height="match_parent"
            android:hint="Present Weather Code"
            android:textSize="14dp"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
          android:layout_width="wrap_content"
          android:layout_weight="1"
          android:orientation="vertical"
          android:paddingBottom="4dp"
          android:layout_gravity="bottom"
          android:layout_marginRight="@dimen/cloud_margin"
          android:layout_marginLeft="@dimen/cloud_margin"
          android:layout_height="match_parent">
          <TextView
            android:layout_width="match_parent"
            android:gravity="top"
            android:visibility="visible"
            android:paddingLeft="4dp"
            android:textSize="11dp"
            android:text="Present Weather"
            android:layout_height="wrap_content" />

          <Spinner
            android:id="@+id/sppresent_weather"
            style="@style/Base.Widget.AppCompat.Spinner.Underlined"
            android:textSize="@dimen/formTextSize"
            android:spinnerMode="dialog"
            android:layout_width="match_parent"
            android:paddingBottom="9dp"
            android:paddingRight="0dp"
            android:layout_height="match_parent"
            android:entries="@array/present_weather_array"
            android:prompt="@string/present_weather_prompt"/>
        </android.support.design.widget.TextInputLayout>

      </LinearLayout>

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_gravity="center_vertical"
      android:layout_marginBottom="1dp"
      android:layout_marginTop="0dp"
      android:orientation="horizontal"
      android:layout_height="wrap_content">
      <android.support.design.widget.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_weight="1"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:layout_height="wrap_content">

        <EditText
          android:id="@+id/past_weather"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="Past Weather"
          android:textSize="@dimen/formTextSize"
          android:inputType="textNoSuggestions"
          android:maxLines="1"
          android:singleLine="true" />

      </android.support.design.widget.TextInputLayout>

      <android.support.design.widget.TextInputLayout
          android:layout_width="wrap_content"
          android:layout_weight="1"
          android:layout_marginLeft="3dp"
          android:layout_marginRight="3dp"
          android:layout_height="wrap_content">

        <EditText
            android:id="@+id/past_weather_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Past Weather Code"
            android:textSize="@dimen/formTextSize"
            android:inputType="textNoSuggestions"
            android:maxLines="1"
            android:singleLine="true" />

      </android.support.design.widget.TextInputLayout>

    </LinearLayout>
      <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputLayout
          android:layout_width="wrap_content"
          android:layout_weight="1"
          android:layout_marginLeft="3dp"
          android:layout_height="wrap_content">

          <EditText
            android:id="@+id/visibility"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Visibility"
            android:cursorVisible="false"
            android:textSize="@dimen/formTextSize"
            android:inputType="numberDecimal"
            android:maxLines="1"
            android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
          android:layout_width="wrap_content"
          android:layout_weight="1"
          android:layout_height="wrap_content">

          <EditText
            android:id="@+id/gusting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Gusting(KTS)"
            android:textSize="@dimen/formTextSize"
            android:inputType="numberDecimal"
            android:maxLines="1"
            android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

      </LinearLayout>

    </LinearLayout>

  </android.support.v7.widget.CardView>
  <android.support.v7.widget.CardView
    android:layout_width="match_parent"
    android:layout_marginBottom="@dimen/loginform"
    android:layout_marginLeft="@dimen/loginform"
    android:layout_marginRight="@dimen/loginform"
    android:layout_height="wrap_content">
    <LinearLayout
      android:layout_width="match_parent"
      android:orientation="vertical"
      android:layout_height="match_parent">
      <TextView
        android:text="  Wind"
        android:textStyle="italic|bold"
        android:layout_margin="7dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
      <TextView
        android:layout_marginLeft="15sp"
        android:layout_marginRight="15sp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#DDC4C4C4"/>
      <LinearLayout
        android:layout_width="match_parent"
        android:layout_margin="3dp"
        android:orientation="horizontal"
        android:layout_height="match_parent">
        <android.support.design.widget.TextInputLayout
          android:layout_width="wrap_content"
          android:layout_weight="1"
          android:layout_height="wrap_content">

          <EditText
            android:id="@+id/wind_direction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Wind Direction"
            android:textSize="@dimen/formTextSize"
            android:inputType="numberDecimal"
            android:maxLines="1"
            android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
          android:layout_width="wrap_content"
          android:layout_weight="1"
          android:layout_height="wrap_content">

          <EditText
            android:id="@+id/wind_speed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Wind Speed(KTS)"
            android:textSize="@dimen/formTextSize"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
          android:layout_width="wrap_content"
          android:layout_weight="1"
          android:layout_height="wrap_content">

          <EditText
            android:id="@+id/sun_duration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Sunshine Duration(hrs)"
            android:textSize="@dimen/formTextSize"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

      </LinearLayout>

      <TextView
        android:layout_marginLeft="15sp"
        android:layout_marginRight="15sp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#DDC4C4C4"/>


    </LinearLayout>

  </android.support.v7.widget.CardView>
  <android.support.v7.widget.CardView
    android:layout_width="match_parent"
    android:layout_marginBottom="@dimen/loginform"
    android:layout_marginLeft="@dimen/loginform"
    android:layout_marginRight="@dimen/loginform"
    android:layout_height="wrap_content">
    <LinearLayout
      android:layout_width="match_parent"
      android:orientation="vertical"
      android:layout_height="match_parent">
      <TextView
        android:text="Rainfall &amp; Temparature"
        android:textStyle="italic|bold"
        android:layout_margin="7dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
      <TextView
        android:layout_marginLeft="15sp"
        android:layout_marginRight="15sp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#DDC4C4C4"/>
      <LinearLayout
        android:layout_width="match_parent"
        android:layout_margin="3dp"
        android:orientation="horizontal"
        android:layout_height="match_parent">
        <android.support.design.widget.TextInputLayout
          android:layout_width="wrap_content"
          android:layout_weight="1"
          android:layout_height="wrap_content">

          <EditText
            android:id="@+id/dry_bulb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Dry Bulb"
            android:textSize="@dimen/formTextSize"
            android:inputType="numberDecimal"
            android:maxLines="1"
            android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
          android:layout_width="wrap_content"
          android:layout_weight="1"
          android:layout_height="wrap_content">

          <EditText
            android:id="@+id/wet_bulb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Wet Bulb"
            android:textSize="@dimen/formTextSize"
            android:inputType="numberDecimal"
            android:maxLines="1"
            android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

      </LinearLayout>

      <TextView
        android:layout_marginLeft="15sp"
        android:layout_marginRight="15sp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#DDC4C4C4"/>


    </LinearLayout>

  </android.support.v7.widget.CardView>


  <LinearLayout
    android:layout_width="match_parent"
    android:layout_marginRight="5dp"
    android:layout_marginLeft="5dp"
    android:layout_gravity="bottom"
    android:orientation="horizontal"
    android:layout_height="55dp">
    <TextView
      android:layout_width="0dp"
      android:visibility="invisible"
      android:layout_weight="2"
      android:layout_height="0dp" />

    <Button
      android:id="@+id/back_page2"
      android:background="@drawable/button_back"
      android:textColor="@color/popup_white"
      android:textSize="12sp"
      android:layout_marginRight="12dp"
      android:layout_width="70dp"
      android:layout_gravity="center"
      android:layout_height="30dp"
      android:text="back"/>

    <TextView
      android:layout_width="0dp"
      android:visibility="invisible"
      android:layout_weight="1"
      android:layout_height="0dp" />


    <Button
      android:id="@+id/next_page4"
      android:background="@drawable/button_next"
      android:textColor="@color/popup_white"
      android:textSize="12sp"
      android:layout_marginRight="12dp"
      android:layout_width="70dp"
      android:layout_gravity="center"
      android:layout_height="30dp"
      android:text="next"/>
    <TextView
      android:layout_width="0dp"
      android:visibility="invisible"
      android:layout_weight="2"
      android:layout_height="0dp" />


  </LinearLayout>


</LinearLayout>
